--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,6 +41,10 @@
         <param-value>aggies92</param-value>
     </context-param>
     <context-param>
+        <param-name>dburl</param-name>
+        <param-value>jdbc:mysql://localhost/world</param-value>
+    </context-param>
+    <context-param>
         <param-name>dbinitcat</param-name>
         <param-value>world</param-value>
     </context-param>
